tests/semantic/fail/struct_same_but_different.c
struct S {int i;};
struct T {int j;};

int main(void) {
  struct S s;
  struct T t;
  if (s == t) {
    return 0;
  }
  return 0;
}
